alterações pagamento