@@ -4,13 +4,14 @@ import br.com.fiap.pagamentos.domain.model.Pagamento;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Data
 @Builder
+@NoArgsConstructor
 @AllArgsConstructor
 public class ConsultaPorChaveResponse {
     private double valor;
@@ -23,6 +24,6 @@ public class ConsultaPorChaveResponse {
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .map(p -> new ConsultaPorChaveResponse(p.getValor(), p.getDescricao(), p.getMetodoPagamento(), p.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
